client/public/main.css
* {
  margin: 0;
  padding: 0;
 }

a {
  cursor: pointer;
}

body {
  background-color: #FAFAFA !important;
  display: inline-block !important;
}

.restaurantform {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-left: 5%;
}

.resCheckBoxPic {
  max-width: 150px;
  max-height: 100px;
  position: absolute;
  top: 50%;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, -50%);
  cursor: pointer;
}

.resSelectionBox {
  position: relative;
  margin: 30px;
  border: 3px solid #ddd;
  height: 110px;
  width: 180px;
  box-shadow: 0 1px 0 #666, 0 5px 0 #444, 0 6px 6px rgba(0,0,0,0.6);
  border-radius: 10px;
  overflow: hidden;
  background-color: white;
  cursor: pointer;
}

.resSelectionBox:active {
  color: #fff;
  text-shadow: 0 -1px 0 #444, 0 0 5px #ffd, 0 0 8px #fff;
  box-shadow: 0 1px 0 #666, 0 2px 0 #444, 0 2px 2px rgba(0,0,0,0.9);
  -webkit-transform: translateY(3px);
  transform: translateY(3px);
}

.userText {
  margin-left: 20px;
  font-family: 'Roboto', sans-serif;
}

hr {
    height: 30px;
    border-style: solid;
    border-color: black;
    border-width: 1px 0 0 0;
    border-radius: 20px;
}

hr:before {
    display: block;
    content: "";
    height: 30px;
    margin-top: -31px;
    border-style: solid;
    border-color: blue;
    border-width: 0 0 1px 0;
    border-radius: 20px;
}

/* NAV BAR */

nav {
  background: transparent !important;
  border: none !important;
}

.nav li a, .glyphicon {
  color: #1a75ff !important;
  font-size: 18px;
  text-decoration: none;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
}

.nav li a:hover, .glyphicon:hover {
  background-color: white !important;
  color: #05018f !important;
  border-radius: 5px !important;
}

/*** MAIN PAGE - ALL DEALS ***/
/** dealList is the container div for dealLogoDiv and dealInfoDiv **/
/** Within dealInfoDiv is dealDescription, dealUrl, dealAddress, dealExpiration **/

.dealList {
  width: 80%;
  margin: auto;
  padding-top: 20px;
}

.dealBox {
  padding-bottom: 30px;
}

.deal {
  margin-bottom: 30px;
  height: 225px;
  border: 3px solid #ddd;
  background-color: #fff;
  box-shadow: 5px 5px 5px #666;
  border-radius: 15px;
  overflow: hidden;
  display: inline;
  position: relative;
}

.deal:hover {
  box-shadow: 6px 6px 6px #05018f;
}

.dealLogoDiv {
  width: 40%;
  float: left;
}

.dealInfoDiv {
  width: 60%;
  height: inherit;
  float: right;
  color: black;
  padding-left: 40px;
}

.dealLogo {
  margin-top: 5%;
  margin-bottom: 5%;
  max-width: 200px;
  max-height: 200px;
}

/** These are all within a single dealInfoDiv **/

.dealExpiration {
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  font-size: 1em;
  position: initial;
}

.dealDescription {
  font-size: 24px;
  font-family: 'Roboto', sans-serif;
  font-weight: 700;
}

.expiration {
  display: block;
  position: absolute;
  padding-top: 88px;
  padding-left: 85px;
  font-family: 'Roboto', sans-serif;
}

.dealAddress {
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  font-color: gray;
  padding-bottom: 8px;
}

.dealUrl {
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
}

.dealDistance {
  font-family: 'Roboto', sans-serif;
  font-size: 20px;
  position: absolute;
  top: 67%;
  left: 80%;
  color: #05018f;
  font-weight: bold;
}

/** End single deal info **/

.logoDiv {
  width: 100%;
}

#map {
  width: 125%;
  height: 22em;
  background-color: gray;
  float: right;
}

#top {
  margin: 0 48%;
  display: inline-block;
}

.top {
  width: 3em;
}

#userAuth {
  text-align: center;
  color: black;
}

#ownerAuth {
  text-align: center;
  color: black;
}

.text {
  text-align: center;
}

#Links {
  text-align: center;
}

.links {
color: #050091;
}

.today {
  display: block;
  margin-top: 0px;
  margin-left: auto;
  margin-right: auto;
  width: 30%;
  font-size: 30px;
  font-family: 'chalkboard';
}

.navbar-brand {
  padding: 0px 15px !important;
}

.dropdown-toggle {
  padding-top: 3px !important;
}

/* SINGLE DEAL MODAL */

.singleDeal {
  overflow: hidden;
  padding: 0;
  width: 85%;
}

.singleDealInfoDiv img{
  max-width: 150px;
}

.singleDealInfoDiv {
  width: 40%;
  float: left;
  font-family: 'Roboto', sans-serif;
  font-weight: 400;
  font-size: 16px;
}

.singleDealExpDiv {
  width: 40%;
  float: right;
  font-family: 'Roboto', sans-serif;
}

.singleDealMetaData {
  padding-top: 25px;
}

.singleExpiration {
  padding-top: 0.5em;
}

#expiry {
  font-size: 20px;
}

.timer {
  font-size: 21px;
  font-weight: 900;
  float: right;
  width: 120%;
}

/* DROPDOWNS */

.filterByExpiration {
  padding: 10px;
}

.filterByCuisine {
  text-align: center;
}

.searchBar {
  padding: 10px;
  z-index: 0;
}

/* OWNER PROFILE */

.ownerProfile {
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  width: 100%;
  margin: 0 auto;
}

#updateResButton {
  margin-left: 38%;
}

#updateRes {
  width: 13em;
}

.ownerProfile h1 {
  text-align: center;
  padding-top: 22px;
}

.ownerProfile input {
  border-radius: 5px;
}

.ownerProfileInfo {
  width: 70%;
  margin: auto;
}

.tabList {
  width: 80%;
  top: 47%;
  left: 10%;
  position: absolute;
  margin: auto;
}

.ownerProfile input:focus {
  box-shadow: 4px 4px 4px #05018f;
  border: 3px solid #05018f;
  padding: 3px;
}

.addressBar {
  text-align: center;
  display: inline-block;
  padding: 10px;
}

input[type='submit'] {
  background-color: #05018f;
  color: white;
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  height: 40px;
  padding: 3px;
  border-radius: 5px;
}

select:focus {
  box-shadow: 4px 4px 4px #05018f;
  border: 3px solid #05018f;
  padding: 2px;
}

textarea:focus {
  box-shadow: 4px 4px 4px #05018f;
  border: 3px solid #05018f;
  padding: 2px;
}

#expireButton {
  width: 57%;
  float: right;
  position: inherit;
  padding-top: 4px;
}

.expireButton {
  background-color: #05018f;
  color: white;
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  height: 40px;
  float: right;
  border-radius: 5px;
  padding: 3px;
}

.ownerDealLogo {
  position: absolute;
  left: 0;
  top: 3%;
  max-width: 250px;
  max-height: 200px;
}

.createDeal {
  background-color: #05018f;
  color: white;
  font-family: 'Roboto', sans-serif;
  font-size: 20px;
  width: 150px;
  height: 50px;
  right: 10%;
  position: absolute;
  border-radius: 5px;
  z-index: 1;
}

#bluePlateLogo {
  width: 100%;
}

.bluePlateLogo {
  max-width: 100%;
}

.userprefs {
  display: inline-block;
}

